@@ -1,11 +1,0 @@
-Changes
-MANIFEST
-Makefile.PL
-README
-lib/Dancer/Template/Tenjin.pm
-t/00-load.t
-t/01-basic.t
-t/index.tt
-t/manifest.t
-t/pod-coverage.t
-t/pod.t
