@@ -1,0 +1,30 @@
+name    = Dancer-Template-Tenjin
+version = 0.4
+author  = Ido Perlmuter <ido@ido50.net>
+license = Perl_5
+copyright_holder = Ido Perlmuter
+
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[MetaJSON]
+[License]
+[PkgVersion]
+[PodVersion]
+[PodCoverageTests]
+[PodSyntaxTests]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[MinimumPerl]
+[Manifest]
+[ConfirmRelease]
+[UploadToCPAN]
+[AutoPrereq]
+[@Git]
+[NextRelease]
+[GithubMeta]
+[ReadmeFromPod]
+[TestRelease]
